--- a/mockups/public/style.scss
+++ b/mockups/public/style.scss
@@ -56,10 +56,15 @@ body {
 }
 
 .site-title {
-  font-size: 2rem;
   font-family: $monospace-font-stack;
-  padding: 0.5em;
+  font-size: 2.5rem;
+  font-weight: 700;
+  padding: 0.25em;
   display: inline-block;
+
+  @media (min-width: $screen-bp-md) {
+    padding: 0.5em;
+  }
 }
 
 .page {
@@ -67,23 +72,44 @@ body {
 }
 
 .hero {
-  background-image: url(https://images.unsplash.com/photo-1592609931095-54a2168ae893?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1592609931095-54a2168ae893?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1563089145-599997674d42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3655&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1619796404374-aff912b43cd2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3628&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1609524400197-21b5840e038b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1608501078713-8e445a709b39?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1559818447-969ea3aa2fbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2148&q=80);
+  // background-image: url(https://images.unsplash.com/photo-1514805081229-07bc65454fd6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3628&q=80);
+  background-image: url(https://images.unsplash.com/photo-1496942299866-9e7ab403e614?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
   background-color: $purple-100;
   background-size: cover;
-  background-blend-mode: luminosity;
+  background-position: center;
+  background-blend-mode: multiply;
   padding: 1em;
   margin: 0 auto 1.5em auto;
-  min-height: 250px;
+  min-height: 275px;
   font-size: 2rem;
   font-weight: 700;
   text-align: center;
   text-shadow: 2px 2px 0 $black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  gap: 1.5em;
 
   &__form {
     display: flex;
+    max-width: 650px;
+    width: 100%;
+    align-self: center;
 
     &__input {
       flex-grow: 1;
+      border: 0;
+      font-size: 1.25rem;
+      font-family: $monospace-font-stack;
+      padding: 0.5em;
     }
 
     &__button {
@@ -92,7 +118,23 @@ body {
       border: 1px solid $white;
       padding: 0.5rem 1.25rem;
       font-weight: 700;
+      font-size: 1rem;
+      font-family: $monospace-font-stack;
       text-transform: uppercase;
+      letter-spacing: 0.04rem;
+
+      &:hover {
+        background-color: $blue-100;
+        cursor: pointer;
+      }
+    }
+
+    &__input,
+    &__button {
+      &:active,
+      &:focus {
+        outline-color: $blue-100;
+      }
     }
   }
 }
@@ -130,6 +172,7 @@ body {
   }
 
   &__card {
+    $this: &;
     border: 1px solid $white;
     min-height: 470px;
     width: 100%;
@@ -142,15 +185,31 @@ body {
       width: 300px;
     }
 
+    &:hover {
+      background-color: $green-100;
+      border-color: $green-100;
+      cursor: pointer;
+
+      #{$this}-poster {
+        height: 100%;
+      }
+
+      #{$this}-headline {
+        display: none;
+      } 
+    }
+
     &-poster {
       background-size: cover;
       background-position: center center;
       width: 100%;
       height: 400px;
+      transition: height 0.5s;
     }
 
     &-headline {
       font-size: 1.5rem;
+      font-family: $monospace-font-stack;
       padding: 0.5em;
     }
   }
