--- a/mockups/public/style.scss
+++ b/mockups/public/style.scss
@@ -99,7 +99,7 @@ body {
   color: $primary-text-color;
 }
 
-.hero {
+.page__homepage .hero {
   // background-image: url(https://images.unsplash.com/photo-1592609931095-54a2168ae893?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
   // background-image: url(https://images.unsplash.com/photo-1563089145-599997674d42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
   // background-image: url(https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3655&q=80);
@@ -107,7 +107,6 @@ body {
   // background-image: url(https://images.unsplash.com/photo-1609524400197-21b5840e038b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
   // background-image: url(https://images.unsplash.com/photo-1608501078713-8e445a709b39?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
   // background-image: url(https://images.unsplash.com/photo-1559818447-969ea3aa2fbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2148&q=80);
-  // background-image: url(https://images.unsplash.com/photo-1514805081229-07bc65454fd6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3628&q=80);
   background-image: url(https://images.unsplash.com/photo-1496942299866-9e7ab403e614?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3570&q=80);
   background-color: $purple-100;
   background-size: cover;
@@ -243,4 +242,76 @@ body {
       padding: 0.5em;
     }
   }
+}
+
+/**********************************************************
+ * View Page
+ *********************************************************/
+
+.page__view {
+  .hero {
+    background-color: $purple-100;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    height: 450px;
+    color: $white;
+    padding: 1em;
+
+    &__overview {
+      background-color: rgba(8, 5, 14, 0.65);
+      height: 100%;
+      padding: 1em;
+    }
+
+    &__title {
+      font-size: 1.75rem;
+    }
+    
+    &__year {
+      font-weight: 300;
+    }
+
+    &__thumbnail {
+      float: left;
+      margin: 0 1em 1em 0;
+      
+      img {
+        width: 85px;
+        height: 130px;
+      }
+    }
+  }
+
+  .section-heading {
+    margin-bottom: 1em;
+    color: $blue-100;
+  }
+
+  .tagline {
+    font-size: 1.25rem;
+    font-weight: 300;
+    font-style: italic;
+    margin-bottom: 1.5em;
+  }
+
+  .overview {
+    font-size: 1.25rem;
+    font-weight: 300;
+  }
+
+  .trailer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .flick-image {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.page-section {
+  margin-bottom: 2em;
 }
