--- a/mockups/public/style.scss
+++ b/mockups/public/style.scss
@@ -254,7 +254,7 @@ body {
     background-size: cover;
     background-position: center;
     background-blend-mode: multiply;
-    height: 450px;
+    min-height: 400px;
     color: $white;
     padding: 1em;
 
@@ -262,6 +262,8 @@ body {
       background-color: rgba(8, 5, 14, 0.65);
       height: 100%;
       padding: 1em;
+      display: flex;
+      flex-direction: column;
     }
 
     &__title {
@@ -281,10 +283,43 @@ body {
         height: 130px;
       }
     }
+
+    &__details {
+      margin: 0;
+      padding: 0;
+      font-size: 1.25rem;
+
+      li {
+        list-style: none;
+        margin-bottom: 0.75em;
+        display: flex;
+        flex-direction: column;
+        gap: 0.5em;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+
+        span {
+          font-weight: 700;
+          font-family: $monospace-font-stack;
+          color: $green-100;
+
+          // &::before {
+          //   content: './';
+          // }
+
+          &::after {
+            content: ':';
+          }
+        }
+      }
+    }
   }
 
   .section-heading {
     margin-bottom: 1em;
+    font-family: $monospace-font-stack;
     color: $blue-100;
   }
 
