--- a/mockups/public/style.scss
+++ b/mockups/public/style.scss
@@ -259,15 +259,33 @@ body {
     padding: 1em;
 
     &__overview {
-      background-color: rgba(8, 5, 14, 0.65);
+      background-color: rgba(8, 5, 14, 0.6);
       height: 100%;
       padding: 1em;
-      display: flex;
-      flex-direction: column;
+      display: grid;
+      grid-template-rows: 2;
+      grid-template-columns: 2;
+      row-gap: 1em;
+
+      @media (min-width: $screen-bp-md) {
+        column-gap: 1.5em;
+        grid-template-columns: minmax(200px, max-content) 1fr;
+      }
+
+      @media (min-width: $screen-bp-lg) {
+        column-gap: 2em;
+        grid-template-rows: minmax(65px, max-content) auto;
+        grid-template-columns: minmax(300px, max-content) 1fr;
+      }
     }
 
     &__title {
+      grid-column: 2;
       font-size: 1.75rem;
+
+      @media (min-width: $screen-bp-lg) {
+        font-size: 2.5rem;
+      }
     }
     
     &__year {
@@ -275,19 +293,37 @@ body {
     }
 
     &__thumbnail {
-      float: left;
-      margin: 0 1em 1em 0;
+      grid-column: 1;
+
+      @media (min-width: $screen-bp-md) {
+        grid-row: 1 / 3;
+      }
       
       img {
-        width: 85px;
-        height: 130px;
+        width: 100px;
+        height: 165px;
+
+        @media (min-width: $screen-bp-md) {
+          width: 200px;
+          height: 330px;
+        }
+
+        @media (min-width: $screen-bp-lg) {
+          width: 300px;
+          height: 495px;
+        }
       }
     }
 
     &__details {
+      grid-column: 1 / 3;
       margin: 0;
       padding: 0;
       font-size: 1.25rem;
+
+      @media (min-width: $screen-bp-md) {
+        grid-column: 2;
+      }
 
       li {
         list-style: none;
@@ -295,6 +331,7 @@ body {
         display: flex;
         flex-direction: column;
         gap: 0.5em;
+        font-weight: 300;
 
         &:last-child {
           margin-bottom: 0;
@@ -348,5 +385,5 @@ body {
 }
 
 .page-section {
-  margin-bottom: 2em;
+  margin-bottom: 2.5em;
 }
