--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -45,8 +45,10 @@
       flicks.forEach(flick => {
         console.log({title: flick.title, posterPath: flick.posterPath});
 
-        const card = document.createElement('div');
+        const card = document.createElement('a');
         card.className = CARD_CLASS;
+        card.href = `/flick/${flick.slug}`;
+        card.title = flick.title;
 
         const poster = document.createElement('div');
         poster.classList.add(CARD_POSTER_CLASS);
