--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -4,5 +4,16 @@
         <a href="https://www.themoviedb.org/"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" /></a>
       </div>
     </footer>
+    <script>
+      window.onscroll = () => {
+        const ribbon = document.querySelector('.ribbon');
+        const RIBBON_START = 85;
+        if (document.body.scrolTop >= RIBBON_START || document.documentElement.scrollTop >= RIBBON_START) {
+          ribbon.classList.add('sticky');
+        } else {
+          ribbon.classList.remove('sticky');
+        }
+      };
+    </script>
   </body>
 </html>
