--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/main.css">
   </head>
   <body>
-    <header class="site-header"">
+    <div class="ribbon"></div>
+    <header class="site-header">
       <span class="site-title">HackerFlix.net</span>
     </header>
