--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -11,7 +11,23 @@
     <link rel="stylesheet" href="../styles/main.css">
   </head>
   <body>
+    <nav id="nav-menu" class="nav-menu">
+      <a href="javascript:void(0)" class="nav-menu__close nav-menu__link">&times;</a>
+      <div class="nav-menu__content">
+        <a href="#" class="nav-menu__link">Home</a>
+        <a href="#" class="nav-menu__link">About</a>
+        <a href="#" class="nav-menu__link">Documentaries</a>
+        <a href="#" class="nav-menu__link">Docuseries</a>
+        <a href="#" class="nav-menu__link">Movies</a>
+        <a href="#" class="nav-menu__link">TV Shows</a>
+      </div>
+    </nav>
     <div class="ribbon"></div>
     <header class="site-header">
       <span class="site-title">HackerFlix.net</span>
+      <div class="open-nav-button">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </header>
