--- a/src/views/styles/main.scss
+++ b/src/views/styles/main.scss
@@ -70,6 +70,18 @@ body {
   height: 85px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+
+  .open-nav-button {
+    padding-right: 1em;
+    width: 3rem;
+
+    div {
+      height: 0.25rem;
+      background-color: $blue-100;
+      margin: 0.5rem 0;
+    }
+  }
 }
 
 .site-title {
@@ -84,8 +96,60 @@ body {
   }
 }
 
+.nav-menu {
+  $this: &;
+  height: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+  font-family: $monospace-font-stack;
+
+  &__content {
+    position: relative;
+    top: 20%;
+    width: 100%;
+    text-align: center;
+  }
+
+  #{$this}__close {
+    position: absolute;
+    top: 15px;
+    right: 25px;
+    font-size: 4rem;
+    padding: 0;
+
+    @media (min-width: $screen-bp-md) {
+      font-size: 6rem;
+    }
+  }
+
+  &__link {
+    padding: 0.25em;
+    text-decoration: none;
+    font-size: 2.25rem;
+    color: $pink-100;
+    display: block;
+    transition: 0.3s;
+
+    @media (min-width: $screen-bp-md) {
+      font-size: 3rem;
+    }
+
+    &:hover, &:focus {
+      color: $green-100;
+      text-shadow: 0 0 5px $green-100;
+    }
+  }
+}
+
 .site-footer {
-  background-color: #000;
+  background-color: $black;
   color: $white;
   padding: 5em 1em;
   margin-top: 5em;
