--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -31,7 +31,9 @@
     </nav>
     <div class="ribbon"></div>
     <header class="site-header">
-      <span class="site-title">HackerFlix.net</span>
+      <a href="/" title="<%- locals.title -%>">
+        <img src="/images/logo.svg" alt="HackerFlix Logo" />
+      </a>
       <div class="open-nav-button">
         <div></div>
         <div></div>
