--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%- title -%></title>
+    <title><%- locals.title -%></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="/main.css">
+    <script>
+      try {
+        window.viewLocals = JSON.parse('<%- JSON.stringify(locals) -%>');
+      } catch (e) {
+        console.error(e);
+      }
+    </script>
   </head>
   <body>
     <nav id="nav-menu" class="nav-menu">
@@ -24,7 +31,9 @@
     </nav>
     <div class="ribbon"></div>
     <header class="site-header">
-      <span class="site-title">HackerFlix.net</span>
+      <a href="/" title="<%- locals.title -%>">
+        <img src="/images/logo.svg" alt="HackerFlix Logo" />
+      </a>
       <div class="open-nav-button">
         <div></div>
         <div></div>
