--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -5,13 +5,6 @@
       </div>
     </footer>
     <script src="/bundle.js"></script>
-    <script>
-      (function(){
-        // Run global client initlization (binds nav menu controls, etc.)
-        window.client.init();
-        // Run page initlization (loads content, and view-specific functionality)
-        window.client.initPage(window.viewLocals.view);
-      })();
-    </script>
+    <script>window.client.init(window.viewLocals.view);</script>
   </body>
 </html>
