--- a/src/views/flick.ejs
+++ b/src/views/flick.ejs
@@ -1,32 +1,45 @@
 <%- include('includes/header'); -%>
 
 <main class="page page__view">
-  <section class="hero" style="background-image:url('https://www.themoviedb.org/t/p/original/bqFO92d1idNAI4OOncUrduz2YoA.jpg')">
+  <section class="hero" style="background-image:url('<%- utils.renderBackdropUrl(locals.flick.backdropPath) -%>')">
     <div class="hero__overview">
       <div class="hero__thumbnail">
-        <img src="https://www.themoviedb.org/t/p/original/qfx2EENW1sOpKNVKLzr7VOhlxkt.jpg" />
+        <img src="<%- utils.renderPosterUrl(locals.flick.posterPath) -%>" />
       </div>
-      <h1 class="hero__title">asdf <span class="hero__year">(1995)</span></h1>
+      <h1 class="hero__title"><%- locals.flick.title -%> <span class="hero__year">(1995x)</span></h1>
       <ul class="hero__details">
-        <li><span>Type</span>Movie</li>
-        <li><span>Released</span>March 4, 1995</li>
-        <li><span>Runtime</span>1h 47m</li>
-        <li><span>Production Country</span>US</li>
+        <li><span>Type</span><%- locals.flick.mediaType -%></li>
+        <li>
+          <% if (locals.flick.tmdbMediaType == 'movie') { %>
+            <span>Released</span>
+            <%- utils.renderDate(locals.flick.releaseDate) -%>
+          <% } else { %>
+            <span>First Aired</span>
+            <%- utils.renderDate(locals.flick.firstAirDate) -%>
+          <% } %>
+        </li>
+        <li><span>Runtime</span><%- utils.renderRuntime(locals.flick.runtime) -%></li>
+        <!-- <li><span>Production Country</span>US</li> -->
       </ul>
     </div>
   </section>
   <div class="row">
-    <div class="page-section">
-      <p class="tagline">
-        Their crime was curiosity.
-      </p>
-    </div>
-    <div class="page-section">
-      <h2 class="section-heading">💬 Overview</h2>
-      <p class="overview">
-        Along with his new friends, a teenager who was arrested by the US Secret Service and banned from using a computer for writing a computer virus discovers a plot by a nefarious hacker, but they must use their computer skills to find the evidence while being pursued by the Secret Service and the evil computer genius behind the virus.
-      </p>
-    </div>
+    <% if (locals.flick.tagline) { %>
+      <div class="page-section">
+        <p class="tagline">
+          <%- locals.flick.tagline -%>
+        </p>
+      </div>
+    <% } %>
+    <% if (locals.flick.overview) { %>
+      <div class="page-section">
+        <h2 class="section-heading">💬 Overview</h2>
+        <p class="overview">
+          <%- locals.flick.overview -%>
+        </p>
+      </div>
+    <% } %>
+    <!--
     <div class="page-section">
       <h2 class="section-heading">🎥 Trailer</h2>
       <div class="trailer">
@@ -37,6 +50,7 @@
       <h2 class="section-heading">📷 Images</h2>
       <img src="https://www.themoviedb.org/t/p/original/4Z5o376Fiw6r10vxqZ4jg5P1Mq7.jpg" class="flick-image" />
     </div>        
+    -->
   </div>
 </main>
 
