--- a/client/css/_variables.scss
+++ b/client/css/_variables.scss
@@ -12,7 +12,7 @@ $primary-text-color-inverted: $purple-300;
 
 $screen-bp-md: 768px;
 $screen-bp-lg: 1024px;
-$screeen-bp-xl: 1440px;
+$screen-bp-xl: 1440px;
 
 $border-radius-sm: 0.25em;
 $border-radius-md: 0.5em;
