--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -3,4 +3,8 @@
 @import './utils';
 
 @import './pages/index-page';
-@import './pages/flick-page'
+@import './pages/flick-page';
+
+@import 'node_modules/@glidejs/glide/src/assets/sass/glide.core';
+@import 'node_modules/@glidejs/glide/src/assets/sass/glide.theme';
+@import './glide';
