feat: add top cast section to flick page

--- a/client/css/_global.scss
+++ b/client/css/_global.scss
@@ -17,6 +17,14 @@ p {
   margin: 0;
 }
 
+ul,
+ol,
+li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: $background-color;
   color: $primary-text-color;
