--- a/client/css/pages/flick-page.scss
+++ b/client/css/pages/flick-page.scss
@@ -197,6 +197,35 @@
     align-items: center;
   }
 
+  .topcast {
+    &__card {
+      max-width: 150px;
+      background-color: $white;
+      font-size: 1rem;
+      color: $black;
+      border-radius: $border-radius-md;
+      overflow: hidden;
+    }
+
+    &__headshot {
+      width: 100%;
+      padding-bottom: 150%;
+      background-position: center;
+      background-size: cover;
+    }
+
+    &__text {
+      padding: 1em 0.5em;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5em;
+    }
+
+    &__name {
+      font-weight: 700;
+    }
+  }
+
   .credits {
     list-style: none;
     padding-left: 0;
