--- a/src/views/flick.ejs
+++ b/src/views/flick.ejs
@@ -43,7 +43,6 @@
             <%- locals.flick.numberOfEpisodes -%>
           </li>          
         <% } %>
-        <!-- <li><span>Production Country</span>US</li> -->
       </ul>
     </div>
   </section>
@@ -63,6 +62,34 @@
         </p>
       </div>
     <% } %>
+    <% if (locals.flick.cast.length) { %>
+      <div class="details-section">
+        <h2 class="details-section__heading">🧑 Top Cast</h2>
+        <div class="glide glide--topcast">
+          <div class="glide__track" data-glide-el="track">
+            <ol class="glide__slides topcast">
+              <% locals.flick.cast.slice(0, 10).forEach(function(cast) { %>
+                <li class="glide__slide topcast__card">
+                  <div class="topcast__headshot" style="background-image: url('<%- utils.renderHeadshotUrl(cast) -%>')"></div>
+                  <div class="topcast__text">
+                    <span class="topcast__name">
+                      <%- cast.name -%>
+                    </span>
+                    <span class="topcast__role">
+                      <%- utils.isMovie(locals.flick) ? cast.character : cast.roles[0].character; -%>
+                    </span>
+                  </div>
+                </li>
+              <% }); %>
+            </ol>
+          </div>
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+          </div>        
+        </div>        
+      </div>
+    <% } %>    
     <!--
     <div class="details-section">
       <h2 class="details-section__heading">🎥 Trailer</h2>
@@ -74,12 +101,12 @@
     <% if (locals.flick.posterImages) { %>
       <div class="details-section">
         <h2 class="details-section__heading">🎨 Posters</h2>       
-        <div class="glide details-section__posters">
+        <div class="glide glide--posters">
           <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
               <% locals.flick.posterImages.forEach(function(path) { %>
                 <li class="glide__slide details-section__poster">
-                  <img src="<%- utils.renderPosterUrl(path) -%>" class="u-img-responsive">
+                  <img loading="lazy" src="<%- utils.renderPosterUrl(path) -%>" class="u-img-responsive">
                 </li>
               <% }); %>
             </ul>
@@ -95,7 +122,7 @@
       <div class="details-section">
         <h2 class="details-section__heading">📜 Credits</h2>
         <ul class="credits">
-          <% if (locals.flick.cast) { %>
+          <% if (locals.flick.cast.length) { %>
             <% locals.flick.cast.forEach(function(cast) { %>
               <li class="credits__credit credits__credit--cast">
                 <span class="credits__role">
@@ -105,7 +132,7 @@
               </li>
             <% }); %>
           <% } %>
-          <% if (locals.flick.cast) { %>   
+          <% if (locals.flick.crew.length) { %>   
             <% locals.flick.crew.forEach(function(crew) { %>
               <li class="credits__credit credits__credit--crew">
                 <span class="credits__role">
