chore: install and run prettier

--- a/client/css/_variables.scss
+++ b/client/css/_variables.scss
@@ -1,8 +1,8 @@
 $black: #000;
 $white: #fff;
-$purple-300: #08050E;
+$purple-300: #08050e;
 $purple-200: #4b2bc4;
-$purple-100: #7E4AE6;
+$purple-100: #7e4ae6;
 $green-100: #a6e12d;
 $blue-100: #00d7ff;
 $pink-100: #be2ec6;
