--- a/client/css/_global.scss
+++ b/client/css/_global.scss
@@ -86,8 +86,8 @@ body {
   z-index: 1;
   left: 0;
   top: 0;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
   overflow-x: hidden;
   transition: 0.5s;
   font-family: $monospace-font-stack;
@@ -123,7 +123,8 @@ body {
       font-size: 3rem;
     }
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       color: $green-100;
       text-shadow: 0 0 5px $green-100;
     }
