--- a/client/css/_glide.scss
+++ b/client/css/_glide.scss
@@ -1,10 +1,18 @@
-.glide__arrow {
-  color: $green-100;
-  top: unset;
-  bottom: -70px;
+.glide {
+  margin-bottom: 4em;
 
-  &:hover {
-    background-color: $green-100;
-    color: $purple-300;
+  &__arrow {
+    border-color: $green-100;
+    top: unset;
+    bottom: -70px;
+    transition: 0.5s;
+
+    &:hover,
+    &:active {
+      background-color: $green-100;
+      color: $purple-300;
+      border-color: $green-100;
+      scale: 1.1;
+    }
   }
 }
