--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -3,6 +3,14 @@
         <div>Powered by:</div>
         <a href="https://www.themoviedb.org/"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" /></a>
       </div>
+      <ul class="site-footer__nav">
+        <li><a href="/" class="nav-menu__link">Home</a></li>
+        <li><a href="/about" class="nav-menu__link">About</a></li>
+        <li><a href="/browse/documentary" class="nav-menu__link">Documentaries</a></li>
+        <li><a href="/browse/docuseries" class="nav-menu__link">Docuseries</a></li>
+        <li><a href="/browse/movie" class="nav-menu__link">Movies</a></li>
+        <li><a href="/browse/show" class="nav-menu__link">TV Shows</a></li>
+      </ul>
     </footer>
     <script src="/bundle.js"></script>
     <script>window.client.init(window.viewLocals.view);</script>
