--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -22,7 +22,7 @@
       <a href="javascript:void(0)" class="nav-menu__close nav-menu__link">&times;</a>
       <div class="nav-menu__content">
         <a href="/" class="nav-menu__link">Home</a>
-        <a href="#" class="nav-menu__link">About</a>
+        <a href="/about" class="nav-menu__link">About</a>
         <a href="/browse/documentary" class="nav-menu__link">Documentaries</a>
         <a href="/browse/docuseries" class="nav-menu__link">Docuseries</a>
         <a href="/browse/movie" class="nav-menu__link">Movies</a>
