--- a/client/css/pages/flick-page.scss
+++ b/client/css/pages/flick-page.scss
@@ -270,14 +270,19 @@
     border-radius: $border-radius-md;
     overflow-y: scroll;
   }
-  
+
   .credits {
+    --scroll-credits-duration: 30s;
+
     list-style: none;
     padding: 500px 0 0 0;
-    animation: scroll-credits 30s linear infinite;
 
-    &:hover {
-      animation-play-state: paused;
+    &--scroll-on {
+      animation: scroll-credits var(--scroll-credits-duration) linear infinite;
+
+      &:hover {
+        animation-play-state: paused;
+      }
     }
 
     &__credit {
