--- a/client/css/_global.scss
+++ b/client/css/_global.scss
@@ -115,7 +115,7 @@ body {
     padding: 0.25em;
     text-decoration: none;
     font-size: 2.25rem;
-    color: $pink-100;
+    color: $purple-100;
     display: block;
     transition: 0.3s;
 
@@ -149,7 +149,7 @@ body {
   }
 
   a {
-    color: $pink-100;
+    color: $purple-100;
     text-decoration: none;
     font-size: 1.5rem;
   }
