--- a/client/css/pages/flick-page.scss
+++ b/client/css/pages/flick-page.scss
@@ -205,6 +205,10 @@
       background-color: $purple-200;
       color: $white;
       border-radius: $border-radius-md;
+
+      &:hover {
+        box-shadow: 0 0 5px $purple-100;
+      }
     }
   }
 
@@ -268,16 +272,17 @@
     height: 500px;
     border: 1px dashed $blue-100;
     border-radius: $border-radius-md;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .credits {
     --scroll-credits-duration: 30s;
 
     list-style: none;
-    padding: 500px 0 0 0;
+    padding: 1em 0;
 
     &--scroll-on {
+      padding: 500px 0 0 0;
       animation: scroll-credits var(--scroll-credits-duration) linear infinite;
 
       &:hover {
@@ -287,7 +292,7 @@
 
     &__credit {
       display: grid;
-      grid-template-columns: 45% 55%;
+      grid-template-columns: 45% auto;
       gap: 0.5em;
       margin-bottom: 0.5em;
 
