--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,6 +10,7 @@
   </section>
   <div class="row">
     <section class="results-grid">
+      <div class="results-grid__error"></div>
       <div class="results-grid__grid">
         <!-- <div class="results-grid__card">
           <div class="results-grid__card-poster"></div> 
