feat: more style tweaks

--- a/client/css/_variables.scss
+++ b/client/css/_variables.scss
@@ -20,3 +20,5 @@ $border-radius-lg: 0.75em;
 
 $primary-font-stack: 'Roboto', 'Open Sans', Helvetica, Arial, sans-serif;
 $monospace-font-stack: 'Inconsolata', 'Roboto Mono', monospace;
+
+$max-content-width: 1300px;
