--- a/client/css/pages/index-page.scss
+++ b/client/css/pages/index-page.scss
@@ -52,6 +52,7 @@
 
       &:hover {
         background-color: $purple-100;
+        color: $white;
         cursor: pointer;
       }
     }
@@ -71,6 +72,8 @@
   display: flex;
   flex-direction: column;
   gap: 2em;
+  max-width: $max-content-width;
+  margin: 0 auto;
 
   &__grid {
     display: flex;
@@ -90,6 +93,7 @@
     border-radius: $border-radius-md;
     overflow: hidden;
     transition: box-shadow 0.5s;
+    text-align: center;
 
     @media (min-width: $screen-bp-md) {
       width: 300px;
